# zrin-llvm

./: CMakeLists.txt  compile.sh  input.json  main
src/: CMakeLists.txt  buildObject.cpp  main.cpp
